--- a/theseus/files/index.html
+++ b/theseus/files/index.html
@@ -2160,92 +2160,94 @@
 
     <li class="item-row">
         <span class="file-title">2013 Primary</span>
-        <a class="ref-link" href="https://drive.google.com/file/d/1t6iLb_DcnfsgadnlIUPMzRFAbYuVeHH1/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Gómez</a>
+        <a class="ref-link" href="hhttps://drive.google.com/file/d/1zE8Cs3DfgT9pEZxlcIBAPg5a9AqdYz9c/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Gómez</a>
       </li>
 
       <li class="item-row">
         <span class="file-title">2013 1R</span>
-        <a class="ref-link" href="https://drive.google.com/file/d/1t6iLb_DcnfsgadnlIUPMzRFAbYuVeHH1/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Bachelet</a>
-        <a class="ref-link" href="https://drive.google.com/file/d/1I514znD-V_BJqilrR0RVI-qKU3LwIngn/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Matthei</a>
-        <a class="ref-link" href="https://drive.google.com/file/d/1t6iLb_DcnfsgadnlIUPMzRFAbYuVeHH1/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Enríquez-Ominami</a>
-        <a class="ref-link" href="https://drive.google.com/file/d/1I514znD-V_BJqilrR0RVI-qKU3LwIngn/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Parisi</a>
-        <a class="ref-link" href="https://drive.google.com/file/d/1t6iLb_DcnfsgadnlIUPMzRFAbYuVeHH1/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Claude</a>
-        <a class="ref-link" href="https://drive.google.com/file/d/1I514znD-V_BJqilrR0RVI-qKU3LwIngn/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Sfeir</a>
-        <a class="ref-link" href="https://drive.google.com/file/d/1t6iLb_DcnfsgadnlIUPMzRFAbYuVeHH1/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Miranda</a>
+        <a class="ref-link" href="https://drive.google.com/file/d/1HdUMzI9srOh-YSziSeN9eIKUiz7paV08/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Bachelet</a>
+        <a class="ref-link" href="https://drive.google.com/file/d/1vQh1bXWucYY9nSp585zg0lSLCKT5KeIU/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Matthei</a>
+        <a class="ref-link" href="https://drive.google.com/file/d/14LwMLUIUJFUrXAgp0IjF7qrDcvild5b3/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Enríquez-Ominami</a>
+        <a class="ref-link" href="https://drive.google.com/file/d/1fgTDw7ir4o359eAaSFsEi2g7K6gGgnuu/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Parisi</a>
+        <a class="ref-link" href="https://drive.google.com/file/d/1eTjThQDeE0y73tYqjPJJhOxN3IsgNxDN/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Claude</a>
+        <a class="ref-link" href="https://drive.google.com/file/d/1Aa7L8F55rVFhyxKU2R4MWoUvR6NxxMOZ/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Sfeir</a>
+        <a class="ref-link" href="https://drive.google.com/file/d/15jQRHLHx1Qvfk4D2bp9VshE1Atr5tOuY/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Miranda</a>
         <a class="ref-link" href="https://drive.google.com/file/d/1I514znD-V_BJqilrR0RVI-qKU3LwIngn/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Israel</a>
-        <a class="ref-link" href="https://drive.google.com/file/d/1t6iLb_DcnfsgadnlIUPMzRFAbYuVeHH1/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Jocelyn-Holt</a>
+        <a class="ref-link" href="https://drive.google.com/file/d/1g9Cfz71H-nZVG8ps9_Wfpo17uJe0cAWa/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Jocelyn-Holt</a>
       </li>
 
      <li class="item-row">
         <span class="file-title">2013 2R</span>
-        <a class="ref-link" href="https://drive.google.com/file/d/1t6iLb_DcnfsgadnlIUPMzRFAbYuVeHH1/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Bachelet</a>
-        <a class="ref-link" href="https://drive.google.com/file/d/1I514znD-V_BJqilrR0RVI-qKU3LwIngn/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Matthei</a>
+        <a class="ref-link" href="https://drive.google.com/file/d/1HdUMzI9srOh-YSziSeN9eIKUiz7paV08/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Bachelet</a>
+        <a class="ref-link" href="https://drive.google.com/file/d/1vQh1bXWucYY9nSp585zg0lSLCKT5KeIU/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Matthei</a>
       </li>
 
       <li class="item-row">
         <span class="file-title">2017 Primary</span>
-        <a class="ref-link" href="https://drive.google.com/file/d/1t6iLb_DcnfsgadnlIUPMzRFAbYuVeHH1/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Piñera</a>
-        <a class="ref-link" href="https://drive.google.com/file/d/1I514znD-V_BJqilrR0RVI-qKU3LwIngn/view?usp=drive_link" target="_blank" rel="noopener noreferrer">F. Kast</a>
-        <a class="ref-link" href="https://drive.google.com/file/d/1t6iLb_DcnfsgadnlIUPMzRFAbYuVeHH1/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Ossandón</a>
-        <a class="ref-link" href="https://drive.google.com/file/d/1I514znD-V_BJqilrR0RVI-qKU3LwIngn/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Sánchez</a>
-        <a class="ref-link" href="https://drive.google.com/file/d/1t6iLb_DcnfsgadnlIUPMzRFAbYuVeHH1/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Mayol</a>
+        <a class="ref-link" href="https://drive.google.com/file/d/1JDVGidKG1JeW235IlOs9ApNDdkRdMU6g/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Piñera</a>
+        <a class="ref-link" href="https://drive.google.com/file/d/1o0o5HYMDpbUZKGCyEU01QL_Kk6T8nSjR/view?usp=drive_link" target="_blank" rel="noopener noreferrer">F. Kast</a>
+        <a class="ref-link" href="https://drive.google.com/file/d/1ulQJ2V59I0Z0i_x8v-6AyGsXKxzmO9Eh/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Ossandón</a>
+        <a class="ref-link" href="https://drive.google.com/file/d/1gy2_95_LaSDnHd8Ir__VeqswL1TGxuO4/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Sánchez</a>
+        <a class="ref-link" href="https://drive.google.com/file/d/1PFcGZouFKl8sutrpZwz4en83l04H7PQk/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Mayol</a>
       </li>
 
       <li class="item-row">
         <span class="file-title">2017 1R</span>
-        <a class="ref-link" href="https://drive.google.com/file/d/1t6iLb_DcnfsgadnlIUPMzRFAbYuVeHH1/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Piñera</a>
-        <a class="ref-link" href="https://drive.google.com/file/d/1I514znD-V_BJqilrR0RVI-qKU3LwIngn/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Guillier</a>
-        <a class="ref-link" href="https://drive.google.com/file/d/1t6iLb_DcnfsgadnlIUPMzRFAbYuVeHH1/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Sánchez</a>
-        <a class="ref-link" href="https://drive.google.com/file/d/1I514znD-V_BJqilrR0RVI-qKU3LwIngn/view?usp=drive_link" target="_blank" rel="noopener noreferrer">JA. Kast</a>
-        <a class="ref-link" href="https://drive.google.com/file/d/1t6iLb_DcnfsgadnlIUPMzRFAbYuVeHH1/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Goic</a>
-        <a class="ref-link" href="https://drive.google.com/file/d/1I514znD-V_BJqilrR0RVI-qKU3LwIngn/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Enríquez-Ominami</a>
-        <a class="ref-link" href="https://drive.google.com/file/d/1t6iLb_DcnfsgadnlIUPMzRFAbYuVeHH1/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Artés</a>
-        <a class="ref-link" href="https://drive.google.com/file/d/1I514znD-V_BJqilrR0RVI-qKU3LwIngn/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Navarro</a>
+        <a class="ref-link" href="https://drive.google.com/file/d/1YIJSVu45LdhNleiHYLVQAPZP-Mkk7Ea6/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Piñera</a>
+        <a class="ref-link" href="https://drive.google.com/file/d/1c7jNC3WCodSbFM2wgXDymAt1Hol-b4rd/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Guillier</a>
+        <a class="ref-link" href="https://drive.google.com/file/d/10KjQYNsN-JK8qVy1hUUA20kBJHdT4CjA/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Sánchez</a>
+        <a class="ref-link" href="https://drive.google.com/file/d/1i8zT3qFk0XKcIBXC6tOmcK1yfqHrwFoc/view?usp=drive_link" target="_blank" rel="noopener noreferrer">JA. Kast</a>
+        <a class="ref-link" href="https://drive.google.com/file/d/1fx4YTu_oSCKRvuLcYpL-g4NlLJoVoTY7/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Goic</a>
+        <a class="ref-link" href="https://drive.google.com/file/d/17TiW2xQvQa059YMRaTAQmcAzqMJ5ZCYN/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Enríquez-Ominami</a>
+        <a class="ref-link" href="https://drive.google.com/file/d/1EkV5AmWM5J2SyL8zgNQc1a8Y_izJFV_u/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Artés</a>
+        <a class="ref-link" href="https://drive.google.com/file/d/1vSUEZSt6I_w8RkPSvPhn9kY5UBSMiQV1/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Navarro</a>
       </li>
 
 
       <li class="item-row">
         <span class="file-title">2017 2R</span>
-        <a class="ref-link" href="https://drive.google.com/file/d/1t6iLb_DcnfsgadnlIUPMzRFAbYuVeHH1/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Piñera</a>
-        <a class="ref-link" href="https://drive.google.com/file/d/1I514znD-V_BJqilrR0RVI-qKU3LwIngn/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Guillier</a>
+        <a class="ref-link" href="https://drive.google.com/file/d/1YIJSVu45LdhNleiHYLVQAPZP-Mkk7Ea6/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Piñera</a>
+        <a class="ref-link" href="https://drive.google.com/file/d/1c7jNC3WCodSbFM2wgXDymAt1Hol-b4rd/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Guillier</a>
       </li>
 
       <li class="item-row">
         <span class="file-title">2021 Primary</span>
-        <a class="ref-link" href="https://drive.google.com/file/d/1t6iLb_DcnfsgadnlIUPMzRFAbYuVeHH1/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Boric</a>
+        <a class="ref-link" href="https://drive.google.com/file/d/1NvIRXLy3G2evXAXvuAogN8mVimscSAgT/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Boric</a>
         <a class="ref-link" href="https://drive.google.com/file/d/1I514znD-V_BJqilrR0RVI-qKU3LwIngn/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Jadue</a>
-        <a class="ref-link" href="https://drive.google.com/file/d/1t6iLb_DcnfsgadnlIUPMzRFAbYuVeHH1/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Sichel</a>
-        <a class="ref-link" href="https://drive.google.com/file/d/1I514znD-V_BJqilrR0RVI-qKU3LwIngn/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Briones</a>
-        <a class="ref-link" href="https://drive.google.com/file/d/1t6iLb_DcnfsgadnlIUPMzRFAbYuVeHH1/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Desbordes</a>
-        <a class="ref-link" href="https://drive.google.com/file/d/1I514znD-V_BJqilrR0RVI-qKU3LwIngn/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Lavín</a>
-        <a class="ref-link" href="https://drive.google.com/file/d/1t6iLb_DcnfsgadnlIUPMzRFAbYuVeHH1/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Provoste</a>
-        <a class="ref-link" href="https://drive.google.com/file/d/1I514znD-V_BJqilrR0RVI-qKU3LwIngn/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Maldonado</a>
-        <a class="ref-link" href="https://drive.google.com/file/d/1t6iLb_DcnfsgadnlIUPMzRFAbYuVeHH1/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Narvaez</a>
+
+        <a class="ref-link" href="https://drive.google.com/file/d/1_xelobpVxKDC2RgR5Ea3R0XLpj3msxag/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Sichel</a>
+        <a class="ref-link" href="https://drive.google.com/file/d/1ojBT0FWJ71kADi3iOYR0JC_MAaEHCB_l/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Briones</a>
+        <a class="ref-link" href="https://drive.google.com/file/d/18vbWtJ8bPaX7cX-LcprfZcKZibxVteX6/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Desbordes</a>
+        <a class="ref-link" href="https://drive.google.com/file/d/1Gm1BrojikRcEE9dzpD1eyLcAHRp760wj/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Lavín</a>
+
+        <a class="ref-link" href="https://drive.google.com/file/d/1DUaBTKtA-6GjqqGZM1EpRuW5qTr8WDB5/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Provoste</a>
+        <a class="ref-link" href="https://drive.google.com/file/d/1epSMNcAYXauKEyD2vIWu7TJTI2S8upQf/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Maldonado</a>
+        <a class="ref-link" href="https://drive.google.com/file/d/1cVlWAh3hVkuMgVIj7cwj3HjD1gjlufAX/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Narváez</a>
   </li>
 
       <li class="item-row">
         <span class="file-title">2021 1R</span>
-        <a class="ref-link" href="https://drive.google.com/file/d/1t6iLb_DcnfsgadnlIUPMzRFAbYuVeHH1/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Boric</a>
+        <a class="ref-link" href="https://drive.google.com/file/d/1Y3zNe8R1cnT62HB38a4JJn2oAtWv-Z4y/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Boric</a>
         <a class="ref-link" href="https://drive.google.com/file/d/1I514znD-V_BJqilrR0RVI-qKU3LwIngn/view?usp=drive_link" target="_blank" rel="noopener noreferrer">JA. Kast</a>
-        <a class="ref-link" href="https://drive.google.com/file/d/1t6iLb_DcnfsgadnlIUPMzRFAbYuVeHH1/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Parisi</a>
-        <a class="ref-link" href="https://drive.google.com/file/d/1I514znD-V_BJqilrR0RVI-qKU3LwIngn/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Sichel</a>
+        <a class="ref-link" href="https://drive.google.com/file/d/1ZAD9eI8OiAPuIIErd-ZVSl_y-7qh9ba6/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Parisi</a>
+        <a class="ref-link" href="https://drive.google.com/file/d/1145R9cM4vaMQN529qdHSInRvohhq2Xd9/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Sichel</a>
         <a class="ref-link" href="https://drive.google.com/file/d/1t6iLb_DcnfsgadnlIUPMzRFAbYuVeHH1/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Provoste</a>
-        <a class="ref-link" href="https://drive.google.com/file/d/1I514znD-V_BJqilrR0RVI-qKU3LwIngn/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Enriquez-Ominami</a>
-        <a class="ref-link" href="https://drive.google.com/file/d/1I514znD-V_BJqilrR0RVI-qKU3LwIngn/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Artés</a>
+        <a class="ref-link" href="https://drive.google.com/file/d/1BXynlblftvj53yaLEUwkLBeK54LImuoV/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Enriquez-Ominami</a>
+        <a class="ref-link" href="https://drive.google.com/file/d/1yNwaT_QnoKtF8t_V0Vt9imAqiMM5_v2S/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Artés</a>
       </li>
 
       <li class="item-row">
         <span class="file-title">2021 2R</span>
-        <a class="ref-link" href="https://drive.google.com/file/d/1t6iLb_DcnfsgadnlIUPMzRFAbYuVeHH1/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Boric</a>
-        <a class="ref-link" href="https://drive.google.com/file/d/1I514znD-V_BJqilrR0RVI-qKU3LwIngn/view?usp=drive_link" target="_blank" rel="noopener noreferrer">JA. Kast</a>
+        <a class="ref-link" href="https://drive.google.com/file/d/1Y3zNe8R1cnT62HB38a4JJn2oAtWv-Z4y/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Boric</a>
+        <a class="ref-link" href="https://drive.google.com/file/d/1Gwtgft3Fra1haP-PoAEBdlA0kvs2qvRi/view?usp=drive_link" target="_blank" rel="noopener noreferrer">JA. Kast</a>
       </li>
 
       <li class="item-row">
         <span class="file-title">2025 Primary</span>
-        <a class="ref-link" href="https://drive.google.com/file/d/1t6iLb_DcnfsgadnlIUPMzRFAbYuVeHH1/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Jara</a>
-        <a class="ref-link" href="https://drive.google.com/file/d/1I514znD-V_BJqilrR0RVI-qKU3LwIngn/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Tohá</a>
-        <a class="ref-link" href="https://drive.google.com/file/d/1I514znD-V_BJqilrR0RVI-qKU3LwIngn/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Winter</a>
-        <a class="ref-link" href="https://drive.google.com/file/d/1I514znD-V_BJqilrR0RVI-qKU3LwIngn/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Mulet</a>        
+        <a class="ref-link" href="https://drive.google.com/file/d/1qEe5J3xdOKQUDwLN9lOqPO_0vlU-WDhV/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Jara</a>
+        <a class="ref-link" href="https://drive.google.com/file/d/1DNXaFoAcKOMa1ugrJbsnBl4hk2drHlTj/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Tohá</a>
+        <a class="ref-link" href="https://drive.google.com/file/d/1m4zgYglbVaxluvk96VfUekB8GHcxKmnC/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Winter</a>
+        <a class="ref-link" href="https://drive.google.com/file/d/1ZqEncO6_Bw3poi-CEzNBNQC07tHlfphY/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Mulet</a>        
       </li>
   </div>
 </section>
