--- a/index.html
+++ b/index.html
@@ -309,6 +309,7 @@ Polarization and Conservative Reactions </em> [Editors: André Borges, Ryan Lloy
 <hr>
 <ul>
 
+<li><strong>La Segunda</strong>. <a href="https://www.lasegunda.com/">Carmona vuelve a irritar el comando de Jara.</a> 26 August, 2025.</li>
 
 <li><strong>Ex-Ante</strong>. <a href="https://www.ex-ante.cl/familia-farandula-y-politica-el-variopinto-plantel-de-candidatos-para-el-apetecido-distrito-10/">Familia, farándula y política: el variopinto plantel de candidatos para el apetecido Distrito 10.</a> 23 August, 2025.</li>
 
