--- a/theseus/images/index.html
+++ b/theseus/images/index.html
@@ -406,6 +406,14 @@
         <div class="row">
           <div class="col-sm-6 col-md-4 mb-4">
             <figure>
+              <a href="9. Metro Protests.jpeg" class="glightbox" data-gallery="ch9">
+                <img src="9. Metro Protests.jpeg" class="thumb" alt="No estamos en guerra">
+              </a>
+              <figcaption>"No estamos en guerra"<br><small><em>(Esteban Felix / Associated Press)</em></small></figcaption>
+            </figure>
+          </div>
+  <div class="col-sm-6 col-md-4 mb-4">
+            <figure>
               <a href="9. No estamos en guerra.jpeg" class="glightbox" data-gallery="ch9">
                 <img src="9. No estamos en guerra.jpeg" class="thumb" alt="No estamos en guerra">
               </a>
