--- a/theseus/images/index.html
+++ b/theseus/images/index.html
@@ -404,15 +404,31 @@
       <section id="ch9" class="chapter-anchor">
         <h2 class="h5 chapter-header">Chapter 9 — October 18, 2019</h2>
         <div class="row">
-          <div class="col-sm-6 col-md-4 mb-4">
+    <div class="col-sm-6 col-md-4 mb-4">
             <figure>
               <a href="9. Metro Protests.jpeg" class="glightbox" data-gallery="ch9">
-                <img src="9. Metro Protests.jpeg" class="thumb" alt="No estamos en guerra">
+                <img src="9. Metro Protests.jpeg" class="thumb" alt="Estudiantes">
               </a>
-              <figcaption>"No estamos en guerra"<br><small><em>(Esteban Felix / Associated Press)</em></small></figcaption>
+              <figcaption>Protests in the Metro of Santiago<br><small><em>(Esteban Felix / Associated Press)</em></small></figcaption>
             </figure>
           </div>
-  <div class="col-sm-6 col-md-4 mb-4">
+    <div class="col-sm-6 col-md-4 mb-4">
+            <figure>
+              <a href="9. Treinta Pesos.jpeg" class="glightbox" data-gallery="ch9">
+                <img src="9. Treinta Pesos.jpeg" class="thumb" alt="No son treinta pesos, son treinta años">
+              </a>
+              <figcaption>"No son treinta pesos, son treinta años"<br><small><em>(Kaosenlared)</em></small></figcaption>
+            </figure>
+          </div>
+    <div class="col-sm-6 col-md-4 mb-4">
+            <figure>
+              <a href="9. Tanks.jpeg" class="glightbox" data-gallery="ch9">
+                <img src="9. Tanks.jpeg" class="thumb" alt="Tanks in Avenida Providencia">
+              </a>
+              <figcaption>Tanks in Avenida Providencia<br><small><em>(La Tercera)</em></small></figcaption>
+            </figure>
+          </div>
+    <div class="col-sm-6 col-md-4 mb-4">
             <figure>
               <a href="9. No estamos en guerra.jpeg" class="glightbox" data-gallery="ch9">
                 <img src="9. No estamos en guerra.jpeg" class="thumb" alt="No estamos en guerra">
@@ -420,7 +436,7 @@
               <figcaption>"No estamos en guerra"<br><small><em>(YouTube / Galería CIMA)</em></small></figcaption>
             </figure>
           </div>
-          <div class="col-sm-6 col-md-4 mb-4">
+    <div class="col-sm-6 col-md-4 mb-4">
             <figure>
               <a href="9. La Marcha mas Grande.jpeg" class="glightbox" data-gallery="ch9">
                 <img src="9. La Marcha mas Grande.jpeg" class="thumb" alt="La Marcha más Grande">
@@ -428,7 +444,7 @@
               <figcaption>"La Marcha más Grande"<br><small><em>(BBC / Susana Hidalgo)</em></small></figcaption>
             </figure>
           </div>
-          <div class="col-sm-6 col-md-4 mb-4">
+    <div class="col-sm-6 col-md-4 mb-4">
             <figure>
               <a href="9. Boric.jpeg" class="glightbox" data-gallery="ch9">
                 <img src="9. Boric.jpeg" class="thumb" alt="Deputy Gabriel Boric in Plaza Baquedano">
@@ -443,14 +459,6 @@
                 <img src="9. Violador.jpeg" class="thumb" alt="Un violador en tu camino">
               </a>
               <figcaption>"Un violador en tu camino"<br><small><em>(Martin Bernetti/AFP via Getty Images)</em></small></figcaption>
-            </figure>
-          </div>
-          <div class="col-sm-6 col-md-4 mb-4">
-            <figure>
-              <a href="9. Treinta Pesos.jpeg" class="glightbox" data-gallery="ch9">
-                <img src="9. Treinta Pesos.jpeg" class="thumb" alt="No son treinta pesos, son treinta años">
-              </a>
-              <figcaption>"No son treinta pesos, son treinta años"<br><small><em>(Kaosenlared)</em></small></figcaption>
             </figure>
           </div>
           <div class="col-sm-6 col-md-4 mb-4">
