--- a/theseus/images/index.html
+++ b/theseus/images/index.html
@@ -425,9 +425,18 @@
               <a href="9. Tanks.jpeg" class="glightbox" data-gallery="ch9">
                 <img src="9. Tanks.jpeg" class="thumb" alt="Tanks in Avenida Providencia">
               </a>
-              <figcaption>Tanks in Avenida Providencia<br><small><em>(La Tercera)</em></small></figcaption>
+              <figcaption>Tanks rolling down Avenida Providencia<br><small><em>(La Tercera)</em></small></figcaption>
             </figure>
           </div>
+    <div class="col-sm-6 col-md-4 mb-4">
+            <figure>
+              <a href="9. Boric.jpeg" class="glightbox" data-gallery="ch9">
+                <img src="9. Boric.jpeg" class="thumb" alt="Deputy Gabriel Boric in Plaza Baquedano">
+              </a>
+              <figcaption>Deputy Gabriel Boric in Plaza Baquedano<br><small><em>(Agencia Uno / La Tercera)</em></small></figcaption>
+            </figure>
+          </div>
+
     <div class="col-sm-6 col-md-4 mb-4">
             <figure>
               <a href="9. No estamos en guerra.jpeg" class="glightbox" data-gallery="ch9">
@@ -442,14 +451,6 @@
                 <img src="9. La Marcha mas Grande.jpeg" class="thumb" alt="La Marcha más Grande">
               </a>
               <figcaption>"La Marcha más Grande"<br><small><em>(BBC / Susana Hidalgo)</em></small></figcaption>
-            </figure>
-          </div>
-    <div class="col-sm-6 col-md-4 mb-4">
-            <figure>
-              <a href="9. Boric.jpeg" class="glightbox" data-gallery="ch9">
-                <img src="9. Boric.jpeg" class="thumb" alt="Deputy Gabriel Boric in Plaza Baquedano">
-              </a>
-              <figcaption>Deputy Gabriel Boric in Plaza Baquedano<br><small><em>(Agencia Uno / La Tercera)</em></small></figcaption>
             </figure>
           </div>
 
