--- a/theseus/images/index.html
+++ b/theseus/images/index.html
@@ -422,6 +422,14 @@
           </div>
     <div class="col-sm-6 col-md-4 mb-4">
             <figure>
+              <a href="9. Carabineros.jpeg" class="glightbox" data-gallery="ch9">
+                <img src="9. Carabineros.jpeg" class="thumb" alt="Carabineross">
+              </a>
+              <figcaption>Carabineros get involved<br><small><em>(Guillermo Salgado)</em></small></figcaption>
+            </figure>
+          </div>
+    <div class="col-sm-6 col-md-4 mb-4">
+            <figure>
               <a href="9. Tanks.jpeg" class="glightbox" data-gallery="ch9">
                 <img src="9. Tanks.jpeg" class="thumb" alt="Tanks in Avenida Providencia">
               </a>
