--- a/theseus/images/index.html
+++ b/theseus/images/index.html
@@ -467,7 +467,7 @@
               <a href="9. Violador.jpeg" class="glightbox" data-gallery="ch9">
                 <img src="9. Violador.jpeg" class="thumb" alt="Un violador en tu camino">
               </a>
-              <figcaption>"Un violador en tu camino"<br><small><em>(Martin Bernetti/AFP via Getty Images)</em></small></figcaption>
+              <figcaption>"Un violador en tu camino"<br><small><em>(Martin Bernetti/AFP)</em></small></figcaption>
             </figure>
           </div>
           <div class="col-sm-6 col-md-4 mb-4">
