--- a/theseus/images/index.html
+++ b/theseus/images/index.html
@@ -764,10 +764,10 @@
           </div>
           <div class="col-sm-6 col-md-4 mb-4">
             <figure>
-              <a href="12. Saumerio.jpeg" class="glightbox" data-gallery="ch12">
-                <img src="12. Saumerio.jpeg" class="thumb" alt="Outside the assembly">
+              <a href="12. Ronda.jpeg" class="glightbox" data-gallery="ch12">
+                <img src="12. Ronda.jpeg" class="thumb" alt="Outside the assembly">
               </a>
-              <figcaption>Outisde the assembly<br><small><em>(CNN Chile)</em></small></figcaption>
+              <figcaption>Rituals outisde the assembly<br><small><em>(CNN Chile)</em></small></figcaption>
             </figure>
           </div>
           <div class="col-sm-6 col-md-4 mb-4">
