--- a/theseus/images/index.html
+++ b/theseus/images/index.html
@@ -759,7 +759,7 @@
               <a href="12. Guitarra.jpeg" class="glightbox" data-gallery="ch12">
                 <img src="12. Guitarra.jpeg" class="thumb" alt="Nicolás Muñoz">
               </a>
-              <figcaption>Nicolás Muñoz<br><small><em>(Agencia Uno)</em></small></figcaption>
+              <figcaption>Serenata in the plenary<br><small><em>(Agencia Uno)</em></small></figcaption>
             </figure>
           </div>
           <div class="col-sm-6 col-md-4 mb-4">
@@ -767,7 +767,7 @@
               <a href="12. Ronda.jpeg" class="glightbox" data-gallery="ch12">
                 <img src="12. Ronda.jpeg" class="thumb" alt="Outside the assembly">
               </a>
-              <figcaption>Rituals outisde the assembly<br><small><em>(CNN Chile)</em></small></figcaption>
+              <figcaption>Rituals outisde the assembly<br><small><em>(La Tercera)</em></small></figcaption>
             </figure>
           </div>
           <div class="col-sm-6 col-md-4 mb-4">
