--- a/columns/index.html
+++ b/columns/index.html
@@ -182,6 +182,13 @@ mark {
 <hr>
 <ul>
 
+<li>20250822 - Garantías</li> 
+<li>20250821 - Castigo político</li> 
+<li>20250808 - Humos y espejos</li> 
+<li>20250723 - El camino entre los extremos</li> 
+<li>20250710 - El centro</li> 
+<li>20250709 - Contradicciones</li> 
+<li>20250705 - Gastos del Estado</li> 
 <li>20250704 - De lobos y ovejas</li>  
 <li>20250703 - Devastación sin respuesta</li>  
 <li>20250702 - El factor decisivo</li>  
