--- a/lun/index.html
+++ b/lun/index.html
@@ -148,6 +148,19 @@
 
 
 <div class="img-container">
+<img src="/img/lun/20250808.jpeg">
+<img src="/img/lun/20250821.jpeg">
+<img src="/img/lun/20250822.jpeg">
+<img src="/img/lun/blanco.jpeg">
+<img src="/img/lun/blanco.jpeg">
+<img src="/img/lun/blanco.jpeg">
+<img src="/img/lun/blanco.jpeg">
+<img src="/img/lun/blanco.jpeg">
+<img src="/img/lun/blanco.jpeg">
+<img src="/img/lun/blanco.jpeg">
+</div>
+
+<div class="img-container">
 <img src="/img/lun/20250618.jpeg">
 <img src="/img/lun/20250630.jpeg">
 <img src="/img/lun/20250702.jpeg">
@@ -157,7 +170,7 @@
 <img src="/img/lun/20250709.jpeg">
 <img src="/img/lun/20250710.jpeg">
 <img src="/img/lun/20250717.jpeg">
-<img src="/img/lun/blanco.jpeg">
+<img src="/img/lun/20250723.jpeg">
 </div>
 
 <div class="img-container">
