--- a/columns/index.html
+++ b/columns/index.html
@@ -574,6 +574,12 @@ mark {
 <hr>
 <ul>
 
+<li>20250822 - Lo que queda del gobierno: resultados y reemplazo</li>
+<li>20250808 - El dilema de la centroizquierda frente a Jara</li>
+<li>20250801 - El primer gobierno comunista en la historia de Chile</li>
+<li>20250718 - Pusilanimes</li>
+<li>20250711 - Sumisión</li>
+<li>20250704 - Dilema del prisionero</li>
 <li>20250630 - Cancelación definitiva: el ocaso de Boric y el Frente Amplio</li>
 <li>20250620 - Una primaria, muchas fracturas</li>
 <li>20250613 - De relato a resultado, llegó la hora de responder</li>
