--- a/lun/index.html
+++ b/lun/index.html
@@ -105,7 +105,7 @@
           Kenneth Bunker
         </a>
 <div class="navbar-nav flex-row flex-wrap justify-content-center">
-  <a class="btn btn-sm btn-outline-primary mr-2 mb-2" href="https://kennethbunker.github.io/cv.pdf" target="_blank" rel="noopener noreferrer">CV</a>
+  <a class="btn btn-sm btn-outline-primary mr-2 mb-2" href="https://kennethbunker.github.io/">Home</a>
   <a class="btn btn-sm btn-outline-primary mr-2 mb-2" href="https://kennethbunker.github.io/press">Press</a>
   <a class="btn btn-sm btn-outline-primary mr-2 mb-2" href="https://kennethbunker.github.io/prensa">Prensa</a>
   <a class="btn btn-sm btn-outline-primary mr-2 mb-2" href="https://kennethbunker.github.io/columns">Columns</a>
