--- a/columns/index.html
+++ b/columns/index.html
@@ -155,9 +155,17 @@ mark {
 <p><em>Below are some of my columns published in <a href="https://en.wikipedia.org/wiki/Las_%C3%9Altimas_Noticias">Las Últimas Noticias</a>, <a href="https://www.ex-ante.cl/">Ex-Ante</a>, <a href="https://es.wikipedia.org/wiki/Teletrece">T13</a>, and <a href="https://en.wikipedia.org/wiki/La_Tercera">La Tercera</a>. For a collection of my comments in the international press, click <a href="https://kennethbunker.github.io/press">here</a>. For a collection of my comments in the Chilean press, click <a href="https://kennethbunker.github.io/prensa">here</a>. To see some of my printed press front page appearances, click <a href="https://kennethbunker.github.io/covers">here</a>.</em></p>
 <hr>
 
-<a href="https://www.lun.com">Las Últimas Noticias</a> / <a href="https://www.ex-ante.cl">Ex-Ante</a> / <a href="https://www.latercera.cl">La Tercera</a> / <a href="https://t13.cl">T13</a>  / <a href="https://elmostrador.cl">El Mostrador</a>
+<div class="navbar-nav flex-row flex-wrap justify-content-center">
+  <a class="btn btn-sm btn-outline-primary mr-2 mb-2" href="https://kennethbunker.github.io/">Las Últimas Noticias</a>
+  <a class="btn btn-sm btn-outline-primary mr-2 mb-2" href="https://kennethbunker.github.io/press">Ex-Ante</a>
+  <a class="btn btn-sm btn-outline-primary mr-2 mb-2" href="https://kennethbunker.github.io/prensa">La Tercera</a>
+  <a class="btn btn-sm btn-outline-primary mr-2 mb-2" href="https://kennethbunker.github.io/columns">T13</a>
+  <a class="btn btn-sm btn-outline-primary mr-2 mb-2" href="https://kennethbunker.github.io/theseus">El Mostrador</a>
+  <a class="btn btn-sm btn-outline-primary mr-2 mb-2" href="https://kennethbunker.github.io/contact">El Mercurio</a>
+</div>
 
 <hr>
+
 <ul>
 <h2 id="las-ultimas-noticias">Las Últimas Noticias</h2>
 <p><a href="https://www.lun.com"><em>Las Últimas Noticias</em></a> <a href="https://kennethbunker.github.io/lun"> <mark style="background: yellow">[IN PRINT!]</mark></a></p>
