--- a/columns/index.html
+++ b/columns/index.html
@@ -156,12 +156,13 @@ mark {
 <hr>
 
 <div class="navbar-nav flex-row flex-wrap justify-content-center">
-  <a class="btn btn-sm btn-outline-primary mr-2 mb-2" href="https://kennethbunker.github.io/">Las Últimas Noticias</a>
-  <a class="btn btn-sm btn-outline-primary mr-2 mb-2" href="https://kennethbunker.github.io/press">Ex-Ante</a>
-  <a class="btn btn-sm btn-outline-primary mr-2 mb-2" href="https://kennethbunker.github.io/prensa">La Tercera</a>
-  <a class="btn btn-sm btn-outline-primary mr-2 mb-2" href="https://kennethbunker.github.io/columns">T13</a>
-  <a class="btn btn-sm btn-outline-primary mr-2 mb-2" href="https://kennethbunker.github.io/theseus">El Mostrador</a>
-  <a class="btn btn-sm btn-outline-primary mr-2 mb-2" href="https://kennethbunker.github.io/contact">El Mercurio</a>
+  <a class="btn btn-sm btn-outline-primary mr-2 mb-2" href="https://kennethbunker.github.io/columns/#las-ultimas-noticias">Las Últimas Noticias</a>
+  <a class="btn btn-sm btn-outline-primary mr-2 mb-2" href="https://kennethbunker.github.io/columns/#ex-ante">Ex-Ante</a>
+  <a class="btn btn-sm btn-outline-primary mr-2 mb-2" href="https://kennethbunker.github.io/columns/#la-tercera">La Tercera</a>
+  <a class="btn btn-sm btn-outline-primary mr-2 mb-2" href="https://kennethbunker.github.io/columns/#t13">T13</a>
+  <a class="btn btn-sm btn-outline-primary mr-2 mb-2" href="https://kennethbunker.github.io/columns/#el-mostrador">El Mostrador</a>
+  <a class="btn btn-sm btn-outline-primary mr-2 mb-2" href="https://kennethbunker.github.io/columns/#el-mercurio">El Mercurio</a>
+  <a class="btn btn-sm btn-outline-primary mr-2 mb-2" href="https://kennethbunker.github.io/columns/#diario-financiero">Diario Financiero</a>
 </div>
 
 <hr>
@@ -822,7 +823,7 @@ mark {
     <div id="content">
     <div class="container">
 
-<h2 id="el-mercurio-">El Mercurio</h2>
+<h2 id="el-mercurio">El Mercurio</h2>
 <p><a href="https://digital.elmercurio.com/"><em>El Mercurio</em></a></p>
 <hr>
 <ul>
@@ -833,7 +834,7 @@ mark {
 
 <hr>
 
-<h2 id="diario-financiero-">Diario Financiero</h2>
+<h2 id="diario-financiero">Diario Financiero</h2>
 <p><a href="https://www.df.cl/"><em>Diario Financiero</em></a></p>
 <hr>
 <ul>
@@ -957,7 +958,7 @@ mark {
 <hr>
 
 
-<h2 id="el-mostrador-">El Mostrador</h2>
+<h2 id="el-mostrador">El Mostrador</h2>
 <p><a href="https://www.elmostrador.cl"><em>El Mostrador</em></a></p>
 <hr>
 <ul>
