--- a/index.html
+++ b/index.html
@@ -277,6 +277,16 @@ Polarization and Conservative Reactions </em> [Editors: André Borges, Ryan Lloy
 
 <hr>
 </div>
+
+<div class="navbar-nav flex-row flex-wrap justify-content-center">
+  <a class="btn btn-sm btn-outline-primary mr-2 mb-2" href="https://kennethbunker.github.io/">Home</a>
+  <a class="btn btn-sm btn-outline-primary mr-2 mb-2" href="https://kennethbunker.github.io/press">Press</a>
+  <a class="btn btn-sm btn-outline-primary mr-2 mb-2" href="https://kennethbunker.github.io/prensa">Prensa</a>
+  <a class="btn btn-sm btn-outline-primary mr-2 mb-2" href="https://kennethbunker.github.io/columns">Columns</a>
+  <a class="btn btn-sm btn-outline-primary mr-2 mb-2" href="https://kennethbunker.github.io/theseus">Book</a>
+  <a class="btn btn-sm btn-outline-primary mr-2 mb-2" href="https://kennethbunker.github.io/contact">Contact</a>
+</div>
+
 </div>
 
   <div class="column">
