--- a/columns/index.html
+++ b/columns/index.html
@@ -134,10 +134,11 @@ mark {
         </a>
 <div class="navbar-nav flex-row flex-wrap justify-content-center">
   <a class="btn btn-sm btn-outline-primary mr-2 mb-2" href="https://kennethbunker.github.io/">Home</a>
-  <a class="btn btn-sm btn-outline-primary mr-2 mb-2" href="https://kennethbunker.github.io/press">Press</a>
+  <a class="btn btn-sm btn-outline-primary mr-2 mb-2" href="https://kennethbunker.github.io/press">In the Press</a>
   <a class="btn btn-sm btn-outline-primary mr-2 mb-2" href="https://kennethbunker.github.io/prensa">Prensa</a>
   <a class="btn btn-sm btn-outline-primary mr-2 mb-2" href="https://kennethbunker.github.io/columns">Columns</a>
   <a class="btn btn-sm btn-outline-primary mr-2 mb-2" href="https://kennethbunker.github.io/theseus">Book</a>
+  <a class="btn btn-sm btn-outline-primary mr-2 mb-2" href="https://kennethbunker.github.io/interviews">Interviews</a>
   <a class="btn btn-sm btn-outline-primary mr-2 mb-2" href="https://kennethbunker.github.io/contact">Contact</a>
 </div>
     </nav>
