--- a/press/index.html
+++ b/press/index.html
@@ -105,32 +105,15 @@
           
           Kenneth Bunker
         </a>
-        <div class="navbar-nav flex-row flex-wrap justify-content-center"> 
-    
-                    <a class="nav-item nav-link" href="https://kennethbunker.github.io/cv.pdf">
-                        CV
-                    </a>
-                        <span class="nav-item navbar-text mx-1">/</span>  
-                    <a class="nav-item nav-link" href="https://kennethbunker.github.io/press">
-                        Press
-                    </a>
-                        <span class="nav-item navbar-text mx-1">/</span>    
-                    <a class="nav-item nav-link" href="https://kennethbunker.github.io/prensa">
-                        Prensa
-                    </a>
-                        <span class="nav-item navbar-text mx-1">/</span>  
-                    <a class="nav-item nav-link" href="https://kennethbunker.github.io/columns">
-                        Columns
-                    </a>
-                        <span class="nav-item navbar-text mx-1">/</span>
-                    <a class="nav-item nav-link" href="https://kennethbunker.github.io/theseus">
-                        Book
-                    </a>                                    
-                        <span class="nav-item navbar-text mx-1">/</span>
-                    <a class="nav-item nav-link" href="https://kennethbunker.github.io/contact">
-                        Contact
-                    </a>  
-        </div>
+<div class="navbar-nav flex-row flex-wrap justify-content-center">
+  <a class="btn btn-sm btn-outline-primary mr-2 mb-2" href="https://kennethbunker.github.io/">Home</a>
+  <a class="btn btn-sm btn-outline-primary mr-2 mb-2" href="https://kennethbunker.github.io/press">In the Press</a>
+  <a class="btn btn-sm btn-outline-primary mr-2 mb-2" href="https://kennethbunker.github.io/prensa">Prensa</a>
+  <a class="btn btn-sm btn-outline-primary mr-2 mb-2" href="https://kennethbunker.github.io/columns">Columns</a>
+  <a class="btn btn-sm btn-outline-primary mr-2 mb-2" href="https://kennethbunker.github.io/theseus">Book</a>
+  <a class="btn btn-sm btn-outline-primary mr-2 mb-2" href="https://kennethbunker.github.io/interviews">Interviews</a>
+  <a class="btn btn-sm btn-outline-primary mr-2 mb-2" href="https://kennethbunker.github.io/contact">Contact</a>
+</div>
     </nav>
 </div>
 <hr>
